melhorias na criacao de concurso, pacotes e compras